welcome.lessons.welcome.bat.bool2.ShareDigit.scala.error
shareDigit:3: error: type mismatch;
 found   : Int
 required: Boolean
    return a/10;
            ^shareDigit:6: error: type mismatch;
 found   : Int
 required: Boolean
    return a/10;
            ^shareDigit:9: error: type mismatch;
 found   : Int
 required: Boolean
    return a%10;
            ^shareDigit:12: error: type mismatch;
 found   : Int
 required: Boolean
    return a%10;
            ^shareDigit:14: error: type mismatch;
 found   : Int(2)
 required: Boolean
  return 2
         ^